# cbwg

./: .gitignore  Cargo.toml  README.md  cbwg.py  pyproject.toml
.github/workflows/: cargo-fuzz.yml  cargo-test.yml  pytest.yml
fuzz/: Cargo.toml
resources/config_files/: llm_transformer_config.yml  parser_config.yml  rule_config.yml  source_config.yml
resources/prompts/: wordlist-generation.md
resources/rules/: d3ad0ne.rule
src/cli/: cli.py  list.txt
src/parsers/: base.py  text.py
src/sources/: base.py  file.py
src/transformers/: __init__.py  base.py  rules.py
src/transformers/llm/: __init__.py  client.py  client_config.py  google_api_client.py  prompt_handler.py  response_processor.py  transformer.py
src/utils/: env.py
tests/: conftest.py
tests/parsers/: test_base.py  test_text.py
tests/sources/: test_base.py  test_file.py
tests/transformers/: test_rules_transformer.py
tests/transformers/llm/: test_transformer.py
trans-engine/: Cargo.toml  pyproject.toml
trans-engine/fuzz/: Cargo.toml
trans-engine/fuzz/fuzz_targets/: engine.rs
trans-engine/src/: engine.rs  lang.rs  lib.rs  parser.rs  python.rs
trans-engine/src/trans_engine/: __init__.py  _core.pyi
trans-engine/tests/: engine.rs  parser.rs
