[project]
name = "trans-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oplik0", email = "opliko@opliko.dev" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
trans-engine = "trans_engine:main"

[tool.maturin]
module-name = "trans_engine._core"
python-packages = ["trans_engine"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
