[package]
name = "trans_engine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.trans_engine]
path = ".."

[[bin]]
name = "engine"
path = "fuzz_targets/engine.rs"
test = false
doc = false
bench = false
